--- a/registro.html
+++ b/registro.html
@@ -34,7 +34,7 @@
                             </div>
                             <div class="mb-3">
                                 <label class="form-label">Apellido Paterno</label>
-                                <input type="text" class="form-control" name="a_paterno">
+                                <input required type="text" class="form-control" name="a_paterno">
                             </div>    
                             <div class="mb-3">
                                 <label class="form-label">Apellido Materno</label>
@@ -51,7 +51,7 @@
                     <div class="card mx-auto my-4" style="width: 30rem;">
                         <div class="card-body">
 
-                        <a href=login.html>Regresar</a>
+                        <a href=login.php>Regresar</a>
                         </div>
                     </div>
 </body>
